--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
   <main>
     <section class="hero-section">
-      <h1>Welcome to EduRise Academy</h1>
+      <h1>Elias to EduRise Academy</h1>
       <p>Empowering students with flexible, technology-driven learning</p>
       <a href="courses.html" class="cta-button">Explore Courses</a>
     </section>
@@ -69,4 +69,5 @@
   </footer>
   <script src="script.js"></script>
 </body>
+
 </html>
